--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#DC143C" />
     <meta
       name="description"
-      content="Portfolio - Chatbot Developer & AI Solutions"
+      content="Royal Portfolio - Luxury AI Solutions & Consulting"
     />
-    <title>Portfolio - Chatbot Developer</title>
+    <title>Royal Portfolio - Modern Luxury Enhanced</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
